crates/parsing/tests/snapshots/grammar_tests__expect_parse@arrow.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/arrow.input
---
Input: a -> b -> c

Start { kind: ArrowType }
  Start { kind: VariableType }
    Start { kind: NameRef }
      Token { kind: Lower }
    Finish
  Finish
  Token { kind: RightArrow }
  Start { kind: ArrowType }
    Start { kind: VariableType }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
    Token { kind: RightArrow }
    Start { kind: VariableType }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
Finish

