crates/parsing/tests/snapshots/grammar_tests__expect_parse@constrained.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/constrained.input
---
Input: A => B => a

Start { kind: ConstrainedType }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
  Token { kind: RightThickArrow }
  Start { kind: ConstrainedType }
    Start { kind: ConstructorType }
      Start { kind: QualifiedName }
        Start { kind: NameRef }
          Token { kind: Upper }
        Finish
      Finish
    Finish
    Token { kind: RightThickArrow }
    Start { kind: VariableType }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
Finish

