crates/parsing/tests/snapshots/grammar_tests__expect_parse@non-empty-tail-record.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/non-empty-tail-record.input
---
Input: { a :: Int, b :: Int | r }

Start { kind: RecordType }
  Start { kind: Wrapped }
    Token { kind: LeftBracket }
    Start { kind: RowInner }
      Start { kind: Separated }
        Start { kind: RowField }
          Start { kind: Name }
            Token { kind: Label }
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
        Token { kind: Comma }
        Start { kind: RowField }
          Start { kind: Name }
            Token { kind: Label }
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
      Finish
      Start { kind: RowTail }
        Token { kind: Pipe }
        Start { kind: VariableType }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
    Token { kind: RightBracket }
  Finish
Finish

