crates/parsing/tests/snapshots/grammar_tests__expect_parse@qualified-do.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/expression/qualified-do.input
---
Input: Hello.do
  f x
  let _ = a
  a <- b

Start { kind: DoExpression }
  Start { kind: QualifiedDo }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Token { kind: DoKw }
  Finish
  Token { kind: LayoutStart }
  Start { kind: OneOrMore }
    Start { kind: DoDiscard }
      Start { kind: ApplicationExpression }
        Start { kind: VariableExpression }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Lower }
            Finish
          Finish
        Finish
        Start { kind: OneOrMore }
          Start { kind: TermArgument }
            Start { kind: VariableExpression }
              Start { kind: QualifiedName }
                Start { kind: NameRef }
                  Token { kind: Lower }
                Finish
              Finish
            Finish
          Finish
        Finish
      Finish
    Finish
    Token { kind: LayoutSep }
    Start { kind: DoLetBinding }
      Token { kind: LetKw }
      Token { kind: LayoutStart }
      Start { kind: OneOrMore }
        Start { kind: LetBindingPattern }
          Start { kind: WildcardBinder }
            Token { kind: Underscore }
          Finish
          Token { kind: Equal }
          Start { kind: WhereExpression }
            Start { kind: VariableExpression }
              Start { kind: QualifiedName }
                Start { kind: NameRef }
                  Token { kind: Lower }
                Finish
              Finish
            Finish
          Finish
        Finish
      Finish
      Token { kind: LayoutEnd }
    Finish
    Token { kind: LayoutSep }
    Start { kind: DoBind }
      Start { kind: VariableBinder }
        Start { kind: Name }
          Token { kind: Lower }
        Finish
      Finish
      Token { kind: LeftArrow }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
  Finish
  Token { kind: LayoutEnd }
Finish

