crates/parsing/tests/snapshots/grammar_tests__expect_parse@trailing-comma.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/failing/expression/trailing-comma.input
---
Input: [ 1, ]

Start { kind: LiteralExpression }
  Start { kind: LiteralArray }
    Token { kind: LeftSquare }
    Start { kind: Separated }
      Start { kind: LiteralExpression }
        Token { kind: LiteralInteger }
      Finish
      Token { kind: Comma }
      Error { message: "expected an expression" }
    Finish
    Token { kind: RightSquare }
  Finish
Finish

