crates/parsing/tests/snapshots/grammar_tests__expect_parse@value.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/declaration/value.input
---
Input: hello = world

Start { kind: ValueDeclaration }
  Start { kind: Name }
    Token { kind: Lower }
  Finish
  Start { kind: ZeroOrMore }
  Finish
  Start { kind: Unconditional }
    Token { kind: Equal }
    Start { kind: WhereExpression }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
  Finish
Finish

